--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "eject": "react-scripts eject"
   },
   "devDependencies": {
+    "enzyme": "^3.3.0",
+    "enzyme-adapter-react-16": "^1.1.1",
+    "enzyme-to-json": "^3.3.4",
     "react-test-renderer": "^16.4.1"
   }
 }
